--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dw501
+    url: jdbc:mysql://localhost:3306/dw_501
     username: root
     password: cyd68400
   jpa:
